<resources>
    <string name="app_name">TaskDemo</string>
    <string name="user1">Good Afternoon</string>
    <string name="user2">Yadnyesh</string>
    <string name="statistics">Statistics</string>
    <string name="income">Income</string>
    <string name="members">Members</string>
    <string name="pt_session">PT Session</string>
    <string name="total">Total</string>
    <string name="expected">Expected</string>
    <string name="pending">Pending</string>
    <string name="renewal">Renewal</string>
    <string name="online">Online</string>
    <string name="pt">PT</string>
    <string name="active">Active</string>
    <string name="booked">Booked</string>
    <string name="consumed">Consumed</string>
    <string name="unused">Unused</string>
    <string name="workout_card">Workout Card</string>
    <string name="not_assigned">Not Assigned</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc"><u><b>Description : </b></u></string>
    <string name="seemore"><u><b>See More : </b></u></string>
    <string name="creator"><b>Creator : </b></string>
    <string name="updated"><b>Updated : </b></string>
    <string name="category"><b>Category : </b></string>
    <string name="content"><b>Content : </b></string>





</resources>