<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C1F6F5F5"
    tools:context=".activity.DetailPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:weightSum="10">

            <TextView
                android:id="@+id/titleTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgsrc"
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_margin="15dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:id="@+id/crtlayout"
    >
    <TextView
    android:textColor="@color/black"
    android:text="@string/creator"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    />
    <TextView
        android:id="@+id/creator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        />

</LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_toRightOf="@+id/crtlayout"
    >
    <TextView
        android:text="@string/updated"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toRightOf="@+id/crtlayout"

        />
    <TextView
        android:id="@+id/lastupdateTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"


        />
</LinearLayout>


            </RelativeLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >
    <TextView
        android:text="@string/category"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginVertical="8dp"
 />
            <TextView
                android:id="@+id/categoryTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="8dp"
 />
</LinearLayout>
            <TextView
                android:text="@string/desc"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="8dp"
                />
            <TextView
                android:id="@+id/descTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:layout_marginBottom="10dp">

                <!--        <TextView-->
                <!--            android:layout_width="wrap_content"-->
                <!--            android:layout_height="wrap_content"-->
                <!--           android:text="@string/seemore"-->
                <!--            -->
                <!--            android:id="@+id/seemoretxt"-->
                <!--            android:textStyle="bold"-->
                <!--            />-->
                <TextView
                    android:id="@+id/see"
                    android:text="@string/seemore"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"

                    />
                <TextView
                    android:id="@+id/seemoreUrlTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/see"
                    android:layout_marginHorizontal="3dp"
                    android:maxLines="1"
                    android:textColor="#000fff"

                    />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="12dp"
                android:background="#C3C3C3"

                />

    <TextView

        android:text="@string/content"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        />
            <TextView
                android:id="@+id/contentTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"

                />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="8dp"
                android:background="#C3C3C3"

                />

            <TextView
                android:id="@+id/fulldescTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>